# movekit

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  LICENSE.txt  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tst.txt  xyz.xlsx
benchmarks/: README.md
docs/: Makefile  README.md  clustering.rst  conf.py  features.rst  group_features.rst  index.rst  network.rst  quick_start.rst  requirements.txt  spatial_analysis.rst
docs/examples/: 01_data_cleaning.ipynb  02_extract_features.ipynb  03_group_features.ipynb  04_spatial_analysis.ipynb  05_network_analysis.ipynb  06_clustering.ipynb
docs/examples/.ipynb_checkpoints/: 01_data_cleaning-checkpoint.ipynb  02_extract_features-checkpoint.ipynb  06_clustering-checkpoint.ipynb
docs/examples/datasets/: fish-5.csv  fish-5.xlsx  fish-6.csv  geo.csv
docs/source/: conf.py
examples/: 01_data_cleaning.ipynb  02_extract_features.ipynb  03_group_features.ipynb  04_spatial_analysis.ipynb  05_network_analysis.ipynb  06_clustering.ipynb  07_movebank.ipynb  Medoid_calculation .ipynb  TS_Clustering.ipynb  Untitled.ipynb  clustering examples.ipynb  demo.ipynb  fish-5-features.csv  fish-5-time-series.json  group_312_df1.csv  group_312_df2.csv  group_312_df3.csv  group_511_df1.csv  group_511_df2.csv  group_511_df3.csv  group_607_df1.csv  group_607_df2.csv  group_607_df3.csv  group_811_df1.csv  group_811_df2.csv  group_811_df3.csv  group_905_df1.csv  group_905_df2.csv  group_905_df3.csv  preprocessing.ipynb
examples/datasets/: Mangabey_monkeys_in_Uganda.csv  extracted_features.csv  fish-4.geojson  fish-5-cleaned.csv  fish-5-features.csv  fish-5.geojson  fish-time-format.xlsx  records.csv  ts_data.csv
movekit/: __init__.py  __version__.py  absolute.py  feature_extraction.py  medoid_calculation.py  preprocess.py  real_positive_acceleration.py
movekit/feature_extraction/: __init__.py  absolute.py  absolute_agg.py  absolute_feature_extraction.py  centroid_calculation.py  comparative.py  feature_moving.py  group.py  medoid_calculation.py  medoid_computation.py  real_positive_acceleration.py
movekit/feature_extraction/tests/: test_absolute.py  test_real_positive_acceleration.py
movekit/features/: absolute.py  centroid_calculation.py  distance_matrix.py  feature_distance.py
movekit/features/tests/: test_absolute.py
movekit/io/: __init__.py  csv.py  excel.py  heading_angle.py  heading_angle_2.py
movekit/io/tests/: test.py
movekit/io/tests/data/: fish-5.xlsx  missing-col.csv  missing-header.csv
movekit/preprocess/: __init__.py  interpolation.py  plot.py  preprocess.py  resample.py  segmentation.py
movekit/preprocess/tests/: test_preprocess.py
movekit/preprocessing/: plot_missing_values.py  preprocess.py  preprocessing_filter.py  replace_parts_animal_movement.py  resample_downsize.py  segmentation.py  split_trajectories.py  split_trajectories_fuzzy_segmentation.py
movekit/preprocessing/tests/: test_preprocess.py
movekit/tests/: io-test.py
src/: setup.py
src/movekit/: __init__.py  average_speed_flexible_time_format.py  clustering.py  code.rst  conf.py  expo.py  feature_extraction.py  feature_extraction_combined.py  io.py  io_combined.py  multiprocessing_test.py  network.py  plot.py  plotting_combined.py  preprocess.py  preprocessing.py  test.py  utils.py
src/movekit/.ipynb_checkpoints/: __init__-checkpoint.py  io-checkpoint.py
src/movekit/_build/doctrees/: code.doctree  environment.pickle  index.doctree  project.doctree  tutorial.doctree
src/movekit/_build/html/: code.html  genindex.html  index.html  objects.inv  project.html  py-modindex.html  search.html  searchindex.js  tutorial.html
src/movekit/_build/html/_sources/: index.rst.txt  project.rst.txt  tutorial.rst.txt
src/movekit/feature_extraction/: __init__.py  absolute_agg.py  comparative.py  feature_extraction_combined.py  using_feature_extraction_combined_file.py
src/movekit/feature_extraction/tests/: test_medoid_calculation_2.py
src/movekit/features/: absolute.py
src/movekit/io/: io_combined.py
src/movekit/io/tests/data/: fish-5.csv
src/movekit/preprocess/: __init__.py  plot.py  plot_x_y.py  preprocessing_combined.py  segmentation.py
src/movekit/preprocessing/: interpolation.py  preprocess.py
tests/: Io.py  Untitled.ipynb  clustering.py  conftest.py  feature_extraction.py  io.py  network.py  plot.py  preprocess.py  test_io.py  test_plot.py  test_preprocess.py  testing_feature_extraction.py  testing_io.py
tests/data/: Completely_Processed_Data-fps_10.csv  Completely_Processed_Data-fps_10_Part-2.csv  all_ts_features.csv  av_accel.pickle  av_speed.pickle  dict_groups.pickle  dict_groups.pkl  dist_and_dir.pickle  empty.xlsx  euc_records.csv  euclidean_dist.csv  filtered.csv  fish-5_time.csv  fish-5_time.xlsx  grouped_dict.csv  interpolated.csv  medoids.csv  missing-col.xlsx  missing-header.xlsx  missings.csv  records.csv  regroups.csv  replaced.pickle  single_ts-feature.csv  split_traj.pickle  split_traj_fuz.pickle  stops.pickle  sys_sample.pickle
