# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = movekit
version = 0.1.15
description = Simple and effective tools for the analysis of movement data
author = Lukas Weixkler, Arjun Majumdar, Eren Cakmak, Jolle Jolles
author_email = lukas.weixler@uni-konstanz.de, arjun.majumdar@uni-konstanz.de, eren.cakmak@uni-konstanz.de, j.w.jolles@gmail.com
license = License :: OSI Approved :: GNU General Public License v3 (GPLv3)
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/dbvis-ukon/movekit
project_urls =
    Documentation = https://pyscaffold.org/
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: MacOS

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    importlib-metadata; python_version<"3.10"
    seaborn>=0.11.0
    pandas>=1.4.1
    scipy>=1.8.0
    tsfresh>=0.19.0
    xlrd>=2.0.1
    shapely>=1.8.1,<2
    matplotlib>=3.5.1,!=3.6.1
    pyod>=0.9.7
    fastdtw>=0.3.4
    h5py>=3.6.0
    geoalchemy2>=0.10.2
    networkx>=2.6.3
    utm>=0.7.0
    st-clustering>=0.0.1
    scikit-learn>=0.22.0
    tqdm>=4.62.3
    numpy>=1.17
    cython<=0.29.32
    folium>=0.12.1
    moviepy>=1.0.3
    geopandas>=0.10.0
    joblib<=1.1.0
    ffmpeg



# The following packages are considered to be unsafe in a requirements file:
setuptools=>=50.3.2        # via distributed, numba
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.5,<3.10

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install movekit[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    pytest
    pytest-cov

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = movekit.module:function
# For example:
# console_scripts =
#     fibonacci = movekit.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov movekit --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.0
package = movekit
extensions =
    no_skeleton
